住所から検索する機能を追加

--- a/AEDMap/Base.lproj/Main.storyboard
+++ b/AEDMap/Base.lproj/Main.storyboard
@@ -33,7 +33,7 @@
                             <constraint firstItem="4ug-Mw-9AY" firstAttribute="top" secondItem="vOL-Cp-bsV" secondAttribute="bottom" id="PvX-AR-amz"/>
                         </constraints>
                     </view>
-                    <tabBarItem key="tabBarItem" title="地図" image="first" id="acW-dT-cKf"/>
+                    <tabBarItem key="tabBarItem" title="地図" image="map-marker" id="acW-dT-cKf"/>
                     <connections>
                         <outlet property="mapView" destination="vOL-Cp-bsV" id="qZN-H2-YOx"/>
                         <segue destination="ig3-9D-VIN" kind="custom" identifier="FromMapViewToDetailView" customClass="CCMPopupSegue" id="cBI-8y-VeK"/>
@@ -51,7 +51,7 @@
                         <viewControllerLayoutGuide type="top" id="nnH-QG-MGw"/>
                         <viewControllerLayoutGuide type="bottom" id="jfl-5e-IMX"/>
                     </layoutGuides>
-                    <view key="view" contentMode="scaleToFill" id="YDs-DN-wJb">
+                    <view key="view" clipsSubviews="YES" contentMode="scaleToFill" id="YDs-DN-wJb">
                         <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
@@ -161,7 +161,7 @@
                             <constraint firstAttribute="trailingMargin" secondItem="d5L-Ac-LWl" secondAttribute="trailing" constant="-16" id="WAV-ZH-Xog"/>
                             <constraint firstAttribute="centerX" secondItem="sF1-X3-qjC" secondAttribute="centerX" id="bWU-fo-Sud"/>
                             <constraint firstItem="DkY-CG-WOv" firstAttribute="top" secondItem="Wdh-Bx-CbV" secondAttribute="bottom" constant="8" id="dyh-av-CB6"/>
-                            <constraint firstItem="Fj8-Sl-8Fc" firstAttribute="top" secondItem="nnH-QG-MGw" secondAttribute="bottom" id="edr-3N-cDn"/>
+                            <constraint firstItem="Fj8-Sl-8Fc" firstAttribute="top" secondItem="nnH-QG-MGw" secondAttribute="top" id="edr-3N-cDn"/>
                             <constraint firstAttribute="trailingMargin" secondItem="Wdh-Bx-CbV" secondAttribute="trailing" id="hKT-W3-tHH"/>
                             <constraint firstItem="DkY-CG-WOv" firstAttribute="leading" secondItem="YDs-DN-wJb" secondAttribute="leadingMargin" constant="32" id="kpo-Qk-hOW"/>
                             <constraint firstItem="aTu-1G-6WC" firstAttribute="leading" secondItem="YDs-DN-wJb" secondAttribute="leadingMargin" constant="16" id="lJJ-Fx-LqB"/>
@@ -199,47 +199,125 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="W91-Jt-iJg" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="1443" y="-206"/>
+            <point key="canvasLocation" x="2123" y="-320"/>
         </scene>
-        <!--Second-->
-        <scene sceneID="wg7-f3-ORb">
+        <!--住所から検索-->
+        <scene sceneID="ls2-vE-eLI">
             <objects>
-                <viewController id="8rJ-Kc-sve" customClass="SecondViewController" sceneMemberID="viewController">
-                    <layoutGuides>
-                        <viewControllerLayoutGuide type="top" id="L7p-HK-0SC"/>
-                        <viewControllerLayoutGuide type="bottom" id="Djb-ko-YwX"/>
-                    </layoutGuides>
-                    <view key="view" contentMode="scaleToFill" id="QS5-Rx-YEW">
+                <tableViewController title="住所から検索" id="Ckm-is-hAe" customClass="AMWardListViewController" sceneMemberID="viewController">
+                    <tableView key="view" clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="44" sectionHeaderHeight="22" sectionFooterHeight="22" id="6hu-SQ-VbV">
                         <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
-                        <subviews>
-                            <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleToFill" text="Second View" textAlignment="center" lineBreakMode="tailTruncation" minimumFontSize="10" translatesAutoresizingMaskIntoConstraints="NO" id="zEq-FU-wV5">
-                                <rect key="frame" x="195" y="279" width="210" height="42"/>
-                                <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
-                                <fontDescription key="fontDescription" name="Helvetica" family="Helvetica" pointSize="36"/>
-                                <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
-                                <nil key="highlightedColor"/>
-                            </label>
-                            <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Loaded by SecondViewController" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="NDk-cv-Gan">
-                                <rect key="frame" x="192" y="329" width="216" height="17"/>
-                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
-                                <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
-                                <nil key="highlightedColor"/>
-                            </label>
-                        </subviews>
-                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
-                        <constraints>
-                            <constraint firstItem="NDk-cv-Gan" firstAttribute="top" secondItem="zEq-FU-wV5" secondAttribute="bottom" constant="8" symbolic="YES" id="Day-4N-Vmt"/>
-                            <constraint firstItem="NDk-cv-Gan" firstAttribute="centerX" secondItem="zEq-FU-wV5" secondAttribute="centerX" id="JgO-Fn-dHn"/>
-                            <constraint firstAttribute="centerX" secondItem="zEq-FU-wV5" secondAttribute="centerX" id="qqM-NS-xev"/>
-                            <constraint firstAttribute="centerY" secondItem="zEq-FU-wV5" secondAttribute="centerY" id="qzY-Ky-pLD"/>
-                        </constraints>
-                    </view>
-                    <tabBarItem key="tabBarItem" title="Second" image="second" id="cPa-gy-q4n"/>
-                </viewController>
-                <placeholder placeholderIdentifier="IBFirstResponder" id="4Nw-L8-lE0" sceneMemberID="firstResponder"/>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                        <prototypes>
+                            <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" reuseIdentifier="cell" textLabel="iDI-QB-khb" style="IBUITableViewCellStyleDefault" id="rsL-ip-Bla">
+                                <autoresizingMask key="autoresizingMask"/>
+                                <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="rsL-ip-Bla" id="K8W-Df-jGy">
+                                    <autoresizingMask key="autoresizingMask"/>
+                                    <subviews>
+                                        <label opaque="NO" multipleTouchEnabled="YES" contentMode="left" text="Title" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" id="iDI-QB-khb">
+                                            <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                            <fontDescription key="fontDescription" type="system" pointSize="16"/>
+                                            <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
+                                            <nil key="highlightedColor"/>
+                                        </label>
+                                    </subviews>
+                                </tableViewCellContentView>
+                            </tableViewCell>
+                        </prototypes>
+                        <connections>
+                            <outlet property="dataSource" destination="Ckm-is-hAe" id="3SV-B5-90W"/>
+                            <outlet property="delegate" destination="Ckm-is-hAe" id="cs1-4A-92a"/>
+                        </connections>
+                    </tableView>
+                    <navigationItem key="navigationItem" title="住所から検索" id="qyJ-FF-pRQ"/>
+                    <connections>
+                        <segue destination="vja-Ej-OoY" kind="show" identifier="gotoTownList" id="xQ8-vX-sBD"/>
+                    </connections>
+                </tableViewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="NxH-gM-SVr" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="750" y="360"/>
+            <point key="canvasLocation" x="1443" y="465"/>
+        </scene>
+        <!--Town List View Controller-->
+        <scene sceneID="X9F-WO-7Pk">
+            <objects>
+                <tableViewController id="vja-Ej-OoY" customClass="AMTownListViewController" sceneMemberID="viewController">
+                    <tableView key="view" clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="44" sectionHeaderHeight="22" sectionFooterHeight="22" id="67F-yT-ccm">
+                        <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                        <prototypes>
+                            <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" reuseIdentifier="cell" id="MKn-mz-zgr">
+                                <autoresizingMask key="autoresizingMask"/>
+                                <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="MKn-mz-zgr" id="sbc-s7-ZBt">
+                                    <autoresizingMask key="autoresizingMask"/>
+                                </tableViewCellContentView>
+                            </tableViewCell>
+                        </prototypes>
+                        <connections>
+                            <outlet property="dataSource" destination="vja-Ej-OoY" id="LsW-4S-IXT"/>
+                            <outlet property="delegate" destination="vja-Ej-OoY" id="eSd-Bj-K28"/>
+                        </connections>
+                    </tableView>
+                    <connections>
+                        <segue destination="viL-JF-VtB" kind="show" identifier="gotoFacilityList" id="Pce-g0-QkF"/>
+                    </connections>
+                </tableViewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="WaJ-2O-ORJ" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="2189" y="465"/>
+        </scene>
+        <!--Facility List View Controller-->
+        <scene sceneID="aAN-f3-fC6">
+            <objects>
+                <tableViewController id="viL-JF-VtB" customClass="AMFacilityListViewController" sceneMemberID="viewController">
+                    <tableView key="view" clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="44" sectionHeaderHeight="22" sectionFooterHeight="22" id="aRY-LZ-f3S">
+                        <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                        <prototypes>
+                            <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" reuseIdentifier="cell" id="07j-pi-nvW">
+                                <autoresizingMask key="autoresizingMask"/>
+                                <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="07j-pi-nvW" id="63O-qo-95N">
+                                    <autoresizingMask key="autoresizingMask"/>
+                                </tableViewCellContentView>
+                            </tableViewCell>
+                        </prototypes>
+                        <connections>
+                            <outlet property="dataSource" destination="viL-JF-VtB" id="etU-rs-sU7"/>
+                            <outlet property="delegate" destination="viL-JF-VtB" id="l6X-dL-hF5"/>
+                        </connections>
+                    </tableView>
+                    <connections>
+                        <segue destination="ig3-9D-VIN" kind="custom" identifier="gotoFacilityDetailFromAddress" customClass="CCMPopupSegue" id="nnt-nj-MaF"/>
+                    </connections>
+                </tableViewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="C8D-Vm-rRY" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="2930" y="465"/>
+        </scene>
+        <!--住所から検索-->
+        <scene sceneID="uEc-Vf-xg4">
+            <objects>
+                <navigationController id="WNK-ip-A3J" sceneMemberID="viewController">
+                    <tabBarItem key="tabBarItem" title="住所から検索" image="address" id="cFU-DL-mdo"/>
+                    <navigationBar key="navigationBar" contentMode="scaleToFill" id="srJ-ZP-DCg">
+                        <rect key="frame" x="0.0" y="0.0" width="320" height="44"/>
+                        <autoresizingMask key="autoresizingMask"/>
+                        <color key="tintColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                        <color key="barTintColor" red="0.83529411760000005" green="0.2901960784" blue="0.0" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                        <textAttributes key="titleTextAttributes">
+                            <color key="textColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                        </textAttributes>
+                    </navigationBar>
+                    <connections>
+                        <segue destination="Ckm-is-hAe" kind="relationship" relationship="rootViewController" id="c02-bm-bvd"/>
+                    </connections>
+                </navigationController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="ntD-aA-a0p" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="763" y="465"/>
         </scene>
         <!--Tab Bar Controller-->
         <scene sceneID="yl2-sM-qoP">
@@ -250,11 +328,11 @@
                         <rect key="frame" x="0.0" y="975" width="768" height="49"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" flexibleMinY="YES"/>
                         <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
-                        <color key="selectedImageTintColor" red="0.83529411760000005" green="0.2901960784" blue="0.0" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                        <color key="tintColor" red="0.83529411760000005" green="0.2901960784" blue="0.0" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                     </tabBar>
                     <connections>
                         <segue destination="9pv-A4-QxB" kind="relationship" relationship="viewControllers" id="u7Y-xg-7CH"/>
-                        <segue destination="8rJ-Kc-sve" kind="relationship" relationship="viewControllers" id="lzU-1b-eKA"/>
+                        <segue destination="WNK-ip-A3J" kind="relationship" relationship="viewControllers" id="ssJ-Tq-lj7"/>
                     </connections>
                 </tabBarController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="HuB-VB-40B" sceneMemberID="firstResponder"/>
@@ -263,7 +341,10 @@
         </scene>
     </scenes>
     <resources>
-        <image name="first" width="30" height="30"/>
-        <image name="second" width="30" height="30"/>
+        <image name="address" width="26" height="18"/>
+        <image name="map-marker" width="16" height="26"/>
     </resources>
+    <inferredMetricsTieBreakers>
+        <segue reference="nnt-nj-MaF"/>
+    </inferredMetricsTieBreakers>
 </document>
